Opened 10 years ago
Closed 6 years ago
#12008 closed bug (fixed)
DataTranslations: Drag and drop doesn't work anymore.
Reported by: | Janus | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Preferences/DataTranslations | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Attachments (1)
Change History (10)
by , 10 years ago
Attachment: | DataTranslations Drag and Drop.png added |
---|
comment:1 by , 10 years ago
Description: | modified (diff) |
---|
comment:2 by , 10 years ago
Summary: | DataTranslations: Drag and drop doen't work anymore. → DataTranslations: Drag and drop doesn't work anymore. |
---|
follow-up: 5 comment:3 by , 10 years ago
comment:5 by , 10 years ago
Replying to humdinger:
I think the drag'n'drop'ability should be removed completely. Like screensavers, translators should come as a package and installed via pgkman or HaikuDepot. As a precedent, the "Add..." button in the Screensavers prefs was eliminated for the same reason.
52 seconds too late :-)
comment:6 by , 10 years ago
Never mind. The drag'n'drop feature is obscure enough anyway compared to the Screensaver's former "Add..." button. :)
comment:7 by , 10 years ago
I keep the ticket open if there is consensus we'll remove the drag and drop support.
comment:8 by , 8 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:9 by , 6 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Note:
See TracTickets
for help on using tickets.
I think the drag'n'drop'ability should be removed completely. Like screensavers, translators should come as a package and installed via pgkman or HaikuDepot. As a precedent, the "Add..." button in the Screensavers prefs was eliminated for the same reason.