DataTranslations: Put the dragged translators in the nonpackage dir.

* Fixes #12008